[package]
name = "ff-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
softposit = "0.4.0"
fixed = "1.24.0"
image = { version = "0.24.8", default-features = false, features = ["png"] }

