[package]
name = "ff-mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp-rust = "0.4.1"
clap = { version = "4.5.0", features = ["derive"] }
colors-transform = "0.2.11"
ff-core = {path = "../ff-core"}
num = "0.4.1"
