[package]
name = "ff-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.9.0"
ff-core = {path = "../ff-core"}
tracing = "0.1.40"
image = { version = "0.24.9", features = ["png"], default-features = false }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
num_cpus = "1.16.0"
tokio = "1.36.0"
num = "0.4.1"

[[bench]]
name = "my_benchmark"
harness = false

