[package]
name = "ff-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http1", "query", "tokio", "tower-log", "tracing", "http2"], default-features = false }
maud = { version = "0.26.0", features = ["axum"] }
num-bigint = { version = "0.4.4", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
